styles.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");

/* Reset default styles */
body,
html {
  margin: 0;
  height: 100%;
}

html {
  scroll-behavior: smooth;
}

body {
  padding-top: 0;
  background-color: #f2f2f2;
  font-family: "Nunito Sans", sans-serif;
  color: #333;
  display: grid;
  grid-template-rows: auto 1fr auto;
  font-optical-sizing: auto;
}

h2 {
  text-align: center;
}

/* Header styles */
.navbar-dark .navbar-nav .nav-link {
  color: white !important;
  z-index: 100;
}

header {
  text-align: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
  height: 60px;
}

header nav a {
  color: white;
  margin: 0 10px;
  text-decoration: none;
  font-size: 18px;
}

.navbar-nav .nav-link:hover {
  color: green !important;
}

header h1 {
  margin: 0;
}

/* Main content styles */
main {
  padding-top: 60px;
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
  scroll-margin-top: 60px;
  flex-direction: column;
  flex: 1;
  width: 80%; /* Set the width to 80% */
  /* height: 25%; Set the height to 25% */
  padding: 20px 0; /* Add vertical padding */
  margin: 0 auto; /* Add auto margins to horizontally center the section */
}
/* ... */

